# aislobsterble

./: Cargo.toml  README.md  defaults.conf
src/: controller.rs  defaults.conf  dictionary.txt  main.rs  models.rs  slobsterble_client.rs  utilities.rs
src/models/: config_models.rs  game_models.rs  mod.rs  serializers.rs
