[package]
name = "aislobsterble"
version = "0.1.0"
edition = "2021"
authors = ["Finn Lidbetter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.0"
chrono = "0.4.19"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.1"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_with = { version = "1.12.1", features = ["chrono"] }